--- a/index.html
+++ b/index.html
@@ -457,6 +457,6 @@
       </div>
     </template>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js" type="module"></script>
   </body>
 </html>
