--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
   <body>
     <main>
       <div class="promo">
-        <h1 class="promo__title visually-hidden">
-          Keksobooking. Кексы по соседству
-        </h1>
-        <img
-          src="img/keksobooking.svg"
-          alt="Keksobooking. Кексы по соседству"
-          width="215"
-          height="45"
-        />
+        <h1 class="promo__title visually-hidden">Keksobooking. Кексы по соседству</h1>
+        <img src="img/keksobooking.svg" alt="Keksobooking. Кексы по соседству" width="215" height="45" />
       </div>
 
       <!-- Карта объявлений -->
@@ -51,11 +44,7 @@
               <option value="2">Две комнаты</option>
               <option value="3">Три комнаты</option>
             </select>
-            <select
-              name="housing-guests"
-              id="housing-guests"
-              class="map__filter"
-            >
+            <select name="housing-guests" id="housing-guests" class="map__filter">
               <option value="any" selected>Любое число гостей</option>
               <option value="2">Два гостя</option>
               <option value="1">Один гость</option>
@@ -67,71 +56,43 @@
                 name="features"
                 value="wifi"
                 id="filter-wifi"
-                class="map__checkbox visually-hidden"
-              />
-              <label class="map__feature map__feature--wifi" for="filter-wifi"
-                >Wi-Fi</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--wifi" for="filter-wifi">Wi-Fi</label>
               <input
                 type="checkbox"
                 name="features"
                 value="dishwasher"
                 id="filter-dishwasher"
-                class="map__checkbox visually-hidden"
-              />
-              <label
-                class="map__feature map__feature--dishwasher"
-                for="filter-dishwasher"
-                >Посудомоечная машина</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--dishwasher" for="filter-dishwasher">Посудомоечная машина</label>
               <input
                 type="checkbox"
                 name="features"
                 value="parking"
                 id="filter-parking"
-                class="map__checkbox visually-hidden"
-              />
-              <label
-                class="map__feature map__feature--parking"
-                for="filter-parking"
-                >Парковка</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--parking" for="filter-parking">Парковка</label>
               <input
                 type="checkbox"
                 name="features"
                 value="washer"
                 id="filter-washer"
-                class="map__checkbox visually-hidden"
-              />
-              <label
-                class="map__feature map__feature--washer"
-                for="filter-washer"
-                >Стиральная машина</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--washer" for="filter-washer">Стиральная машина</label>
               <input
                 type="checkbox"
                 name="features"
                 value="elevator"
                 id="filter-elevator"
-                class="map__checkbox visually-hidden"
-              />
-              <label
-                class="map__feature map__feature--elevator"
-                for="filter-elevator"
-                >Лифт</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--elevator" for="filter-elevator">Лифт</label>
               <input
                 type="checkbox"
                 name="features"
                 value="conditioner"
                 id="filter-conditioner"
-                class="map__checkbox visually-hidden"
-              />
-              <label
-                class="map__feature map__feature--conditioner"
-                for="filter-conditioner"
-                >Кондиционер</label
-              >
+                class="map__checkbox visually-hidden" />
+              <label class="map__feature map__feature--conditioner" for="filter-conditioner">Кондиционер</label>
             </fieldset>
           </form>
         </div>
@@ -145,20 +106,12 @@
           action="https://26.javascript.pages.academy/keksobooking"
           method="post"
           enctype="multipart/form-data"
-          autocomplete="off"
-        >
+          autocomplete="off">
           <fieldset class="ad-form-header">
-            <legend class="ad-form-header__title">
-              Ваша фотография (для карты)
-            </legend>
+            <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
             <div class="ad-form-header__upload">
               <div class="ad-form-header__preview">
-                <img
-                  src="img/muffin-grey.svg"
-                  alt="Аватар пользователя"
-                  width="40"
-                  height="44"
-                />
+                <img src="img/muffin-grey.svg" alt="Аватар пользователя" width="40" height="44" />
               </div>
               <div class="ad-form__field">
                 <input
@@ -166,24 +119,18 @@
                   id="avatar"
                   name="avatar"
                   class="ad-form-header__input visually-hidden"
-                />
-                <label class="ad-form-header__drop-zone" for="avatar"
-                  >Загрузить<br />фото...</label
-                >
+                  accept="image/png, image/jpeg" />
+                <label class="ad-form-header__drop-zone" for="avatar">Загрузить<br />фото...</label>
               </div>
               <p class="ad-form-header__info">
-                Заполните все обязательные поля, назначьте цену, загрузите
-                аватар и фото жилья. Придумайте интересное описание. Оно сделает
-                объявление более живым и привлекательным. Получившееся
-                объявление должно давать гостям полное представление о вашем
-                жилье.
+                Заполните все обязательные поля, назначьте цену, загрузите аватар и фото жилья. Придумайте интересное
+                описание. Оно сделает объявление более живым и привлекательным. Получившееся объявление должно давать
+                гостям полное представление о вашем жилье.
               </p>
             </div>
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide">
-            <label class="ad-form__label" for="title"
-              >Заголовок объявления</label
-            >
+            <label class="ad-form__label" for="title">Заголовок объявления</label>
             <input
               id="title"
               name="title"
@@ -193,20 +140,16 @@
               maxlength="100"
               required
               data-pristine-required-message="Обязательное поле *"
-              data-pristine-minlength-message="Минимальная длина 30 символов"
-            />
+              data-pristine-minlength-message="Минимальная длина 30 символов" />
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide">
-            <label class="ad-form__label" for="address"
-              >Адрес (координаты)</label
-            >
+            <label class="ad-form__label" for="address">Адрес (координаты)</label>
             <input
               id="address"
               name="address"
               type="text"
               required
-              data-pristine-required-message="Обязательное поле *"
-            />
+              data-pristine-required-message="Обязательное поле *" />
           </fieldset>
           <fieldset class="ad-form__element">
             <label class="ad-form__label" for="type">Тип жилья</label>
@@ -226,14 +169,11 @@
               type="number"
               placeholder="5000"
               required
-              data-pristine-required-message="Обязательное поле *"
-            />
+              data-pristine-required-message="Обязательное поле *" />
             <div class="ad-form__slider"></div>
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--time">
-            <label class="ad-form__label" for="timein"
-              >Время заезда и выезда</label
-            >
+            <label class="ad-form__label" for="timein">Время заезда и выезда</label>
             <select id="timein" name="timein">
               <option value="12:00" selected>После 12</option>
               <option value="13:00">После 13</option>
@@ -246,9 +186,7 @@
             </select>
           </fieldset>
           <fieldset class="ad-form__element">
-            <label class="ad-form__label" for="room_number"
-              >Количество комнат</label
-            >
+            <label class="ad-form__label" for="room_number">Количество комнат</label>
             <select id="room_number" name="rooms">
               <option value="1" selected>1 комната</option>
               <option value="2">2 комнаты</option>
@@ -266,31 +204,21 @@
             </select>
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide features">
-            <legend>
-              Удобства: Wi-Fi, кухня, парковка, стиралка, лифт, кондиционер
-            </legend>
+            <legend>Удобства: Wi-Fi, кухня, парковка, стиралка, лифт, кондиционер</legend>
             <input
               class="features__checkbox visually-hidden"
               type="checkbox"
               name="feature"
               value="wifi"
-              id="feature-wifi"
-            />
-            <label
-              class="features__label features__label--wifi"
-              for="feature-wifi"
-              >Wi-Fi</label
-            >
+              id="feature-wifi" />
+            <label class="features__label features__label--wifi" for="feature-wifi">Wi-Fi</label>
             <input
               class="features__checkbox visually-hidden"
               type="checkbox"
               name="feature"
               value="dishwasher"
-              id="feature-dishwasher"
-            />
-            <label
-              class="features__label features__label--dishwasher"
-              for="feature-dishwasher"
+              id="feature-dishwasher" />
+            <label class="features__label features__label--dishwasher" for="feature-dishwasher"
               >Посудомоечная машина</label
             >
             <input
@@ -298,59 +226,36 @@
               type="checkbox"
               name="feature"
               value="parking"
-              id="feature-parking"
-            />
-            <label
-              class="features__label features__label--parking"
-              for="feature-parking"
-              >Парковка</label
-            >
+              id="feature-parking" />
+            <label class="features__label features__label--parking" for="feature-parking">Парковка</label>
             <input
               class="features__checkbox visually-hidden"
               type="checkbox"
               name="feature"
               value="washer"
-              id="feature-washer"
-            />
-            <label
-              class="features__label features__label--washer"
-              for="feature-washer"
-              >Стиральная машина</label
-            >
+              id="feature-washer" />
+            <label class="features__label features__label--washer" for="feature-washer">Стиральная машина</label>
             <input
               class="features__checkbox visually-hidden"
               type="checkbox"
               name="feature"
               value="elevator"
-              id="feature-elevator"
-            />
-            <label
-              class="features__label features__label--elevator"
-              for="feature-elevator"
-              >Лифт</label
-            >
+              id="feature-elevator" />
+            <label class="features__label features__label--elevator" for="feature-elevator">Лифт</label>
             <input
               class="features__checkbox visually-hidden"
               type="checkbox"
               name="feature"
               value="conditioner"
-              id="feature-conditioner"
-            />
-            <label
-              class="features__label features__label--conditioner"
-              for="feature-conditioner"
-              >Кондиционер</label
-            >
+              id="feature-conditioner" />
+            <label class="features__label features__label--conditioner" for="feature-conditioner">Кондиционер</label>
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide">
-            <label class="ad-form__label" for="description"
-              >Описание (не обязательно)</label
-            >
+            <label class="ad-form__label" for="description">Описание (не обязательно)</label>
             <textarea
               id="description"
               name="description"
-              placeholder="Здесь расскажите о том, какое ваше жилье замечательное и вообще"
-            ></textarea>
+              placeholder="Здесь расскажите о том, какое ваше жилье замечательное и вообще"></textarea>
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide">
             <label class="ad-form__label">Фотография жилья</label>
@@ -361,10 +266,8 @@
                   id="images"
                   name="images"
                   class="ad-form__input visually-hidden"
-                />
-                <label for="images" class="ad-form__drop-zone"
-                  >Загрузить<br />фото...</label
-                >
+                  accept="image/png, image/jpeg" />
+                <label for="images" class="ad-form__drop-zone">Загрузить<br />фото...</label>
               </div>
               <div class="ad-form__photo"></div>
             </div>
@@ -379,41 +282,22 @@
 
     <footer class="footer container">
       <div class="footer__copyright copyright">
-        <a
-          class="copyright__link copyright__link--image"
-          href="https://htmlacademy.ru/intensive/javascript"
-        >
-          <img
-            src="img/htmla-logo.svg"
-            width="130"
-            height="45"
-            alt="HTML Academy"
-            class="copyright__logo"
-          />
+        <a class="copyright__link copyright__link--image" href="https://htmlacademy.ru/intensive/javascript">
+          <img src="img/htmla-logo.svg" width="130" height="45" alt="HTML Academy" class="copyright__logo" />
         </a>
         <p>
           Сделано в
-          <a
-            class="copyright__link copyright__link--text"
-            href="https://htmlacademy.ru/intensive/javascript"
+          <a class="copyright__link copyright__link--text" href="https://htmlacademy.ru/intensive/javascript"
             >HTMLAcademy</a
           >
         </p>
       </div>
       <ul class="footer__contacts contacts">
         <li>
-          <a
-            href="https://twitter.com/htmlacademy_ru"
-            class="contacts__link contacts__link--twitter"
-            >Twitter</a
-          >
+          <a href="https://twitter.com/htmlacademy_ru" class="contacts__link contacts__link--twitter">Twitter</a>
         </li>
         <li>
-          <a
-            href="https://vk.com/htmlacademy"
-            class="contacts__link contacts__link--vk"
-            >VK</a
-          >
+          <a href="https://vk.com/htmlacademy" class="contacts__link contacts__link--vk">VK</a>
         </li>
       </ul>
     </footer>
@@ -421,23 +305,13 @@
     <!-- Карточка объявления -->
     <template id="card">
       <article class="popup">
-        <img
-          src="img/avatars/user01.png"
-          class="popup__avatar"
-          width="70"
-          height="70"
-          alt="Аватар пользователя"
-        />
+        <img src="img/avatars/user01.png" class="popup__avatar" width="70" height="70" alt="Аватар пользователя" />
         <h3 class="popup__title">Уютное гнездышко для молодоженов</h3>
-        <p class="popup__text popup__text--address">
-          102-0082 Tōkyō-to, Chiyoda-ku, Ichibanchō, 14−3
-        </p>
+        <p class="popup__text popup__text--address">102-0082 Tōkyō-to, Chiyoda-ku, Ichibanchō, 14−3</p>
         <p class="popup__text popup__text--price">5200 <span>₽/ночь</span></p>
         <h4 class="popup__type">Квартира</h4>
         <p class="popup__text popup__text--capacity">2 комнаты для 3 гостей</p>
-        <p class="popup__text popup__text--time">
-          Заезд после 14:00, выезд до 10:00
-        </p>
+        <p class="popup__text popup__text--time">Заезд после 14:00, выезд до 10:00</p>
         <ul class="popup__features">
           <li class="popup__feature popup__feature--wifi"></li>
           <li class="popup__feature popup__feature--dishwasher"></li>
@@ -447,18 +321,11 @@
           <li class="popup__feature popup__feature--conditioner"></li>
         </ul>
         <p class="popup__description">
-          Великолепная квартира-студия в центре Токио. Подходит как туристам,
-          так и бизнесменам. Квартира полностью укомплектована и недавно
-          отремонтирована.
+          Великолепная квартира-студия в центре Токио. Подходит как туристам, так и бизнесменам. Квартира полностью
+          укомплектована и недавно отремонтирована.
         </p>
         <div class="popup__photos">
-          <img
-            src=""
-            class="popup__photo"
-            width="45"
-            height="40"
-            alt="Фотография жилья"
-          />
+          <img src="" class="popup__photo" width="45" height="40" alt="Фотография жилья" />
         </div>
       </article>
     </template>
